--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,16 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+  <body class="bg-white min-h-screen flex flex-col">
+  <%= render "shared/navbar" %>
+
+    <main class="flex-grow">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
+      <%= yield %>
+    </div>
+  </main>
+
+  <%= render "shared/footer" %>
+</body>
 </html>
+
