--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -4,3 +4,13 @@
       --color-gold: oklch(0.7587 0.1433 90.71);
       --color-brand-blue: oklch(0.3097 0.0305 266.25); 
 }
+
+@layer base {
+  table thead th {
+    @apply text-left align-middle;
+  }
+
+  table tbody td {
+    @apply align-middle;
+  }
+}
