--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,26 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body class="bg-white min-h-screen flex flex-col">
   <%= render "shared/navbar" %>
 
+  <!-- Flash messages -->
+  <% flash.each do |key, message| %>
+    <% color = case key.to_sym
+      when :notice then "bg-green-100 text-green-800 border-green-300"
+      when :alert  then "bg-red-100 text-red-800 border-red-300"
+      else "bg-gray-100 text-gray-800 border-gray-300"
+    end %>
+
+    <div class="mb-4 rounded border px-4 py-2 <%= color %>">
+      <%= message %>
+    </div>
+  <% end %>
+  
     <main class="flex-grow">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
       <%= yield %>
