--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,7 +18,7 @@
   <div class="rounded border p-4">
     <div class="text-sm text-gray-500">Cards ready</div>
     <div class="text-3xl font-semibold">
-      <%= Card.owned_by(current_user).for_kind("Case").count %>
+      <%= CardTemplate.owned_by(current_user).for_kind("Case").count %>
     </div>
     <div class="mt-2"><%= link_to "Start learning", new_session_path, class: "underline" %></div>
   </div>
