--- a/app/views/card_templates/new.html.erb
+++ b/app/views/card_templates/new.html.erb
@@ -1,3 +1,5 @@
-<h1 class="text-xl font-semibold mb-4">New Case</h1>
+<h1 class="text-xl font-semibold mb-4">New <%= @card.kind %></h1>
 <%= render "form" %>
-<p class="mt-3"><%= link_to "Back", entries_path(subject_id: params[:subject_id] || @card&.subject_id), class: "underline" %></p>
+<p class="mt-3">
+  <%= link_to "Back", entries_path(subject_id: params[:subject_id] || @card&.subject_id), class: "underline" %>
+</p>
