--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -95,7 +95,7 @@
       </details>
       <details class="rounded-md border bg-white p-4">
         <summary class="font-semibold cursor-pointer">What can I study?</summary>
-        <p class="mt-2 text-gray-600 text-sm">You can currently add any legal case. Support for statutes will be coming soon.</p>
+        <p class="mt-2 text-gray-600 text-sm">You can currently add any legal case. Support for provisions will be coming soon.</p>
       </details>
       <details class="rounded-md border bg-white p-4">
         <summary class="font-semibold cursor-pointer">Can I come back to a session later?</summary>
