--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit Subject</h1>
+<h1 class="text-2xl font-semibold mb-4">Edit Subject</h1>
+<p class="mb-4"><%= link_to "← Back", subjects_path, class: "underline" %></p>
 <%= render "form", subject: @subject %>
-<p><%= link_to "Back", subjects_path %></p>
